<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvBanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/create_room"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ct1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tvBanner">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ctRoom"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/etNameRoom"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:hint="@string/name_room"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etDescRoom"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/desc_room"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etNameRoom" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ctAddAssetInRoom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/etDescRoom">

                    <Spinner
                        android:id="@+id/spAsset"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btnAddAsset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/add_asset_in_room"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/spAsset"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ctAsset"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <EditText
                    android:id="@+id/etNameAsset"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:hint="@string/name_asset"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etCateAsset"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/cate_asset"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etNameAsset" />

                <EditText
                    android:id="@+id/etPosition"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/position_asset"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etCateAsset" />

                <EditText
                    android:id="@+id/etPrice"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/price_assets"
                    android:inputType="numberDecimal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etPosition" />

                <TextView
                    android:id="@+id/tvRoom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/category"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etPrice" />

                <Spinner
                    android:id="@+id/spRoom"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toEndOf="@id/tvRoom"
                    app:layout_constraintTop_toBottomOf="@id/etPrice" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btnCOrU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/create"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ct1" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ct1" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/btnCOrU"
            tools:layout_editor_absoluteX="-34dp"
            tools:listitem="@layout/item_asset" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>